Public Comments UX/UI Development
- Reconciled the layouts for the pillars & topics strings in both the list and detail views (public comments)
- Added join to the array for topics (vc.directives.js)_
- Fixed an issued with some side navigation menu items not showing the correct cursor on hover

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3750,10 +3750,13 @@ section.project-info {
 	}
 }
 
-.pillar-vcs {
-	.tag-list + .btn {
-		margin-top: 1rem;
-	}
+.tag-list {
+	font-style: italic;
+	color: #888;
+}
+
+.tag-list + .btn {
+	margin-top: 0.5rem;
 }
 
 .pcp-pillar-vc-list {
