Project Tombstone Updates
- Added "_blank" property to the CEAA URL field

--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -44,21 +44,21 @@
 				</div>
 			</div>
 			<div class="col-sm-4 col-md-4">
-				<div class="detail-row" ng-show="project.CEAAInvolvement">
-					<label>CEAA Involvement</label>
-					<span class="value">{{ ::project.CEAAInvolvement }}</span>
-				</div>
-			</div>
-			<div class="col-sm-4 col-md-4">
 				<div class="detail-row" ng-show="project.eacDecision">
 					<label>EAC Decision</label>
 					<span class="value">{{ ::project.eacDecision }}</span>
 				</div>
 			</div>
+			<div class="col-sm-4 col-md-4">
+				<div class="detail-row" ng-show="project.CEAAInvolvement">
+					<label>CEAA Involvement</label>
+					<span class="value">{{ ::project.CEAAInvolvement }}</span>
+				</div>
+			</div>
 			<div class="col-sm-4 col-md-4" ng-if="project.CEAALink">
 				<div class="detail-row">
 					<label>CEAA URL</label>
-					<span class="value"><a href="{{ ::project.CEAALink }}">{{ ::project.CEAALink }}</a></span>
+					<span class="value"><a href="{{ ::project.CEAALink }}" target="_blank">{{ ::project.CEAALink }}</a></span>
 				</div>
 			</div>
 		</div>
