--- a/modules/documents/client/views/partials/modal-document-upload-classify.html
+++ b/modules/documents/client/views/partials/modal-document-upload-classify.html
@@ -1,10 +1,10 @@
 <div class="modal-header">
-	<h3 class="modal-title">Project Documents</h3>
+	<h3 class="modal-title">Upload Documents</h3>
 </div>
 <div class="modal-body">
 	<tmpl-documents-upload-classify x-project="docUploadModal.project" x-type="project"></tmpl-documents-upload-classify>
 </div>
 <div class="modal-footer">
 	<button class="btn btn-default" type="button" ng-click="docUploadModal.cancel()">Cancel</button>
-	<button class="btn btn-default" type="button" ng-click="docUploadModal.ok()">Save</button>
+	<button class="btn btn-primary" type="button" ng-click="docUploadModal.ok()">OK</button>
 </div>
