--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -16,7 +16,7 @@
 			<div class="col-sm-4 col-md-4">
 				<div class="detail-row">
 					<label>Proponent</label>
-					<span class="value">{{ ::project.proponent.name }}</span>
+					<span class="value">{{ ::project.proponent.company }}</span>
 				</div>
 			</div>
 			<div class="col-sm-4 col-md-4">
