--- a/modules/documents/client/views/partials/document-upload-classify.html
+++ b/modules/documents/client/views/partials/document-upload-classify.html
@@ -1,91 +1,62 @@
-<label class="control-label">Upload Documents</label>
-<div class="well well-sm container-fluid">
-	<div class="row">
-		<div class="col-md-12">
-		    <div ngf-drop ngf-select ng-model="files" class="drop-box"
-		        ngf-drag-over-class="dragover"
-		        ngf-multiple="true"
-		        ngf-allow-dir="true"
-		        ngf-max-total-size="300MB">Drop files here or click to upload
-		    </div>
+
+<div class="upload-documents-view">
+
+	<!-- UPLOAD -->
+	<div class="form-group attachments">
+		<label>Select Files for Upload</label>
+
+		<div class="alert alert-danger" ngf-no-file-drop >
+			File Drag and Drop is not supported for this browser.
 		</div>
+
+		<div class="attachments-upload-target">
+			<div ngf-drop ngf-select ng-model="files"
+				ngf-drag-over-class="dragover"
+				ngf-multiple="true"
+				ngf-allow-dir="true"
+				ngf-max-total-size="1MB">
+				<div class="instructions"><strong>Drag and Drop Files Here</strong> or <strong>Select Files</strong></div>
+				<div class="requirements">Total upload size limited to 300MB.</div>
+			</div>
+		</div>
+
+		<div class="list-group hover">
+			<li class="list-group-item" ng-class="{'danger': f.$error}" ng-repeat="f in docUpload.fileList">
+				<div class="file-icon">
+					<span class="glyphicon glyphicon-file"></span>
+				</div>
+				<div class="file-name">{{f.name}} {{f.$error}} {{f.$errorParam}}</div>
+				<div class="file-progress" ng-if="!f.$error && f.progress">
+					<div class="progress">
+						<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:{{f.progress}}%" ng-bind="f.progress + '%'">
+							<span class="sr-only">{{ f.progress }}</span>
+						</div>
+					</div>
+				</div>
+				<button class="file-actions btn btn-link" ng-if="!f.$error && !f.progress" ng-click="docUpload.removeFile(f)" title="Remove File">
+					<span class="glyphicon glyphicon-remove"></span>
+				</button>
+			</li>
+		</div>
+
+	</div><!-- UPLOAD -->
+
+	<!-- REQUIRED FIELDS -->
+	<div class="form-group">
+		<label class="control-label">Select Related Content<em>Required</em></label>
+		<select class="form-control" 
+				ng-options="stype as stype.name for stype in docUpload.artifacts" 
+				ng-model="docUpload.selectedArtifact"></select>
 	</div>
 
-	<div class="row">
-		<div class="col-sm-4">
-
-		</div>
-	</div>
-
-	<table class="table table-condensed">
-		<thead>
-			<tr class="small" colspan="3">
-				<th>Destination for New Documents</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td width="34%" style="padding-top: 5px;">
-					<div class="form-group">
-						<label class="control-label">Content</label>
-						<select class="form-control"
-								ng-options="stype as stype.name for stype in docUpload.artifacts"
-								ng-model="docUpload.selectedArtifact"></select>
-					</div>
-				</td>
-			</tr>
-			<tr>
-				<td width="34%" style="padding-top: 5px;">
-					<div class="form-group">
-						<label class="control-label">Type</label>
-						<select class="form-control"
-								ng-init="docUpload.selectedDocLocation = docUpload.docLocations[0]"
-								ng-options="docLocation as docLocation.name for docLocation in docUpload.docLocations"
-								ng-model="docUpload.selectedDocLocation"></select>
-					</div>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-
-	<table class="table table-condensed">
-		<thead>
-			<tr class="small">
-				<th>Files</th>
-				<th width="10%"></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ngf-no-file-drop>
-				<td class="text-center" colspan=2>
-					<p class="form-control-static">File Drag/Drop is not supported for this browser</p>
-				</td>
-			</tr>
-			<tr ng-if="!files">
-				<td class="text-center" colspan=2 class="text-center">
-					<p class="form-control-static">Drag a file to the dashed region above to upload.</p>
-				</td>
-			</tr>
-			<tr ng-repeat="f in docUpload.fileList" ng-class="{'danger': f.$error}">
-
-				<td ng-if="f.$error" colspan=2>
-					<p class="form-control-static text-danger">FILE ERROR: {{f.name}} {{f.$error}} {{f.$errorParam}}</p>
-				</td>
-
-				<td ng-if="!f.$error">
-					<p class="form-control-static">{{f.name}} {{f.$error}} {{f.$errorParam}}</p>
-				</td>
-				<td ng-if="!f.$error && !f.progress" class="text-right">
-					<p class="form-control-static"><a href ng-click="docUpload.removeFile(f)"><span class="glyphicon glyphicon-remove"></span></a></p>
-				</td>
-
-				<td ng-if="!f.$error && f.progress">
-					<div class="progress" ng-show="f.progress >= 0" style="margin-top: 7px;"><div class="progress-bar progress-bar-success" role="progressbar" style="width:{{f.progress}}%" ng-bind="f.progress + '%'">{{ f.progress }}</div></div>
-				</td>
-
-			</tr>
-		</tbody>
-	</table>
+	<div class="form-group">
+		<label class="control-label">Document Type<em>Required</em></label>
+		<select class="form-control" 
+				ng-options="docLocation as docLocation.name for docLocation in docUpload.docLocations"
+				ng-model="docUpload.selectedDocLocation"></select>
+	</div><!-- / REQUIRED FIELDS -->
 
 </div>
+
+
 
