--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -21,10 +21,16 @@
             </div>
 
             <div class="pcp-details">
+                <!-- ABOUT -->
                 <section>
                     <h4>About this Comment Period...</h4>
-                    <pre class="pcp-desc" ng-if="!isClosed">{{ period.instructions }}</pre>
-                    <pre class="pcp-desc" ng-if="isClosed">These are the closing remarks</pre>
+                    <pre class="pcp-desc" ng-if="!period.instructions">No Description Available.</pre>
+                    <pre class="pcp-desc" ng-if="period.instructions">{{ period.instructions }}</pre>
+                    <!-- <pre class="pcp-desc" ng-if="isClosed">These are the closing remarks</pre> -->
+                </section><!-- / ABOUT -->
+                <!-- RELATED DOCUMENTS -->
+                <section>
+                    <h4>Related Documents</h4>
                     <ul class="pcp-package-links">
                         <li>
                             <a x-artifact-display-modal x-mode="'view'" x-artifact="artifact" x-project="project">
@@ -32,8 +38,9 @@
                             </a>
                         </li>
                     </ul>
-                </section>
-                <section>
+                </section><!-- / RELATED DOCUMENTS -->
+                <!-- OPEN HOUSE -->
+                <section ng-if="period.openHouses.length > 0">
                     <h4>Open House Dates</h4>
                     <ul class="pcp-open-house-list">
                         <li ng-repeat="h in period.openHouses">
@@ -41,7 +48,7 @@
                             <pre>{{ h.description }}</pre>
                         </li>
                     </ul>
-                </section>
+                </section><!-- / OPEN HOUSE -->
             </div>
 
         </div>
