--- a/modules/documents/client/views/partials/modal-document-upload-classify.html
+++ b/modules/documents/client/views/partials/modal-document-upload-classify.html
@@ -1,4 +1,7 @@
 <div class="modal-header">
+	<button type="button" class="btn btn-default close" ng-click="docUploadModal.cancel()">
+		<span aria-hidden="true">&times;</span>
+	</button>
 	<h3 class="modal-title">Upload Documents</h3>
 </div>
 <div class="modal-body">
